# weather

./: LICENSE  test.py
sim800l/: Cargo.toml
sim800l/src/: matching.rs
station/: Cargo.toml
station/.cargo/: config.toml
station/src/: main.rs
