[package]
name = "station"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
codegen-units = 1
debug = 0
lto = true
opt-level = "z"

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
stm32f1xx-hal = { version = "0.10", features = ["rt", "stm32f103", "medium"] }

rtt-target = "0.4"
panic-rtt-target = { version = "0.1", features = ["cortex-m"] }

shared-bus = "0.3.1"

embedded-drivers = "0.0.2"
lsm303dlhc = "0.2.0"
